# mongodb-log

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
mongolog/: __init__.py  handlers.py
samples/: simple_logging.py
tests/: logging-test.config  support.py  test_auth.py  test_config.py  test_handler.py
tools/webui/: webui.py
