[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mongolog"
dynamic = ["version"]
description = "Centralized logging made simple using MongoDB."
readme = "README.rst"
requires-python = ">=3.9"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Andrei Savu", email = "contact@andreisavu.ro"},
]
maintainers = [
    {name = "Jorge Puente Sarrín", email = "puentesarrin@gmail.com"},
]
keywords = ["logging", "mongo", "mongodb", "pymongo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: System :: Logging",
]
dependencies = [
    "pymongo>=4.17,<5",
]

[project.optional-dependencies]
dev = ["build", "coverage[toml]", "tox>=4.21", "twine"]

[project.urls]
Homepage = "https://github.com/puentesarrin/mongodb-log"
Repository = "https://github.com/puentesarrin/mongodb-log"
Issues = "https://github.com/puentesarrin/mongodb-log/issues"

[tool.setuptools.dynamic]
version = {attr = "mongolog.__version__"}

[tool.setuptools.packages.find]
include = ["mongolog*"]

[tool.coverage.run]
branch = true
source = ["mongolog"]

[tool.coverage.report]
show_missing = true
